--- a/src/components/reservation-component/reservation-component.scss
+++ b/src/components/reservation-component/reservation-component.scss
@@ -5,6 +5,14 @@
     .box-wrapper {
         display: flex;
     }
+    .btn {
+        padding: 6px 12px;
+        border-radius: 5px;
+        margin-bottom: 5px;
+        margin-right: 5px;
+        border: 1px solid #bebebe;
+        background-color: white;
+    }
     .table-wrapper {
         width: 70%;
         border-radius: 10px;
@@ -43,6 +51,10 @@
                         border: 0;
                         color: blue;
                         text-decoration: underline;
+                        
+                        &:disabled {
+                            color: #bebebe;
+                        }
                     };
                 }
                 &:hover {
@@ -80,6 +92,7 @@
     
                     span {
                         font-size: 10px;
+                        color: red;
                     }
                 }
                 input, select, textarea, button {
